--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>I'm Jasper De Moor, i make awesome stuff from applications for Android, IOS, OS X, Windows,... <br />to simple designed logo's, websites,... and even <br /> complex websites with control panels and stuff.</p>
+<p>Kind Regards, Jasper</p>
 </body>
 </html>
