--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>JasperDM Development</title>
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+
+  <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm Jasper De Moor, i make awesome stuff from applications for Android, IOS, OS X, Windows,... <br />to simple designed logo's, websites,... and even <br /> complex websites with control panels and stuff.</p>
-<p>Kind Regards, Jasper</p>
+  <h1>Hello world</h1>
 </body>
 </html>
