--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
 </head>
 
 <body>
-  <h1>Hello world</h1>
+  <div id="navbar">
+    <a href="">Home</a>
+    <a href="">Projects</a>
+    <a href="">About</a>
+    <a href="">Contact</a>
+  </div>
+  
+  <div id="container">
+    <h1>Hello world</h1>
+  </div>
+  
+  <div id="footer">
+    Copyright Jasper De Moor
+  </div>
 </body>
 </html>
