--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 <body>
   <div id="navbar">
-    <a href="">Home</a>
-    <a href="">Projects</a>
-    <a href="">About</a>
-    <a href="">Contact</a>
+    <a href="">HOME</a>
+    <a href="">PROJECTS</a>
+    <a href="">ABOUT</a>
+    <a href="">CONTACT</a>
   </div>
   
   <div id="container">
