--- a/index.html
+++ b/index.html
@@ -2,31 +2,35 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-
-  <title>JasperDM Development</title>
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="stijl.css">
-
-  <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+	<meta charset="utf-8">
+	<title>Jasper De Moor webdevelopment</title>
+	<meta name="description" content="Responsive Header Nav">
+	<meta name="author" content="Treehouse">
+	<meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
+		<link rel="stylesheet" href="css/styles.css">
+	<!--[if IE]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
-
 <body>
-  <div id="navbar">
-    <a href="">HOME</a>
-    <a href="">PROJECTS</a>
-    <a href="">ABOUT</a>
-    <a href="">CONTACT</a>
-  </div>
-  
-  <div id="container">
-    <h1>Hello world</h1>
-  </div>
-  
-  <div id="footer">
-    Copyright Jasper De Moor
-  </div>
+	<header>
+		<a href="#" id="logo">JASPER DE MOOR</a>
+		<nav>
+			<a href="#" id="menu-icon"></a>
+			<ul>
+				<li><a href="#" class="current">HOME</a></li>
+				<li><a href="#">ABOUT</a></li>
+				<li><a href="#">SERVICES</a></li>
+				<li><a href="#">CONTACT</a></li>
+			</ul>
+		</nav>
+	</header>
+
+	<img src="img/featured.jpg" alt="Respond" />
+
+	<section>
+		<h1>WELCOME</h1>
+
+		<p>This website is still under construction, you can contact me on <a href="mailto:jdemo@live.be">jdemo@live.be</a></p>
+	</section>
+
 </body>
 </html>
