--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
 		<link rel="stylesheet" href="css/styles.css">
 	<!--[if IE]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+	<script src="js/text.js"></script>
 </head>
 <body>
 	<header>
@@ -24,12 +26,15 @@
 		</nav>
 	</header>
 
-	<img src="img/featured.jpg" alt="Respond" />
-
 	<section>
-		<h1>WELCOME</h1>
+		<div id='ScrollTXT'>
+			<h1>JASPER DE MOOR</h1>
+			<p>WEBDEVELOPMENT &amp; WEBDESIGN</p>
+		</div>
 
-		<p>This website is still under construction, you can contact me on <a href="mailto:jdemo@live.be">jdemo@live.be</a></p>
+		<div id="contact">
+			<p>CONTACT: <a href="mailto:jdemo@live.be">JDEMO@LIVE.BE</a></p>
+		</div>
 	</section>
 
 </body>
