--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<!--[if IE]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 	<script src="js/text.js"></script>
+	<script src="js/scroll.js"></script>
 </head>
 <body>
 	<header>
