--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 	</header>
 
 	<section>
-		<div id='ScrollTXT'>
-			<h1>JASPER DE MOOR</h1>
-			<p>WEBDEVELOPMENT &amp; WEBDESIGN</p>
+		<div id="home">
+			<div id='ScrollTXT'>
+				<h1>JASPER DE MOOR</h1>
+				<p>WEBDEVELOPMENT &amp; WEBDESIGN</p>
+			</div>
 		</div>
 		
 		<div id="about">
