--- a/portfolio.html
+++ b/portfolio.html
@@ -41,6 +41,54 @@
                 <div class="overlay"></div>
             </article>
         </a>
+        <a href="http://sanguine.finestevents.org">
+            <article>
+                <h3>Sanguine Collective</h3>
+                <p>Informational HTML5 & CSS3 website</p>
+                <img src="assets/img/portfolio/003.png" alt="Sanguine" title="Sanguine" />
+                <div class="overlay"></div>
+            </article>
+        </a>
+        <a href="http://sanguine.finestevents.org">
+            <article>
+                <h3>Sanguine Collective</h3>
+                <p>Informational HTML5 & CSS3 website</p>
+                <img src="assets/img/portfolio/003.png" alt="Sanguine" title="Sanguine" />
+                <div class="overlay"></div>
+            </article>
+        </a>
+        <a href="Projects/001/index.html">
+            <article>
+                <h3>Grow it, Eat it</h3>
+                <p>School project with HTML5 and CSS3</p>
+                <img src="assets/img/portfolio/004.png" alt="Grow it, Eat it" title="Grow it, Eat it" />
+                <div class="overlay"></div>
+            </article>
+        </a>
+        <a href="Projects/002/index.html">
+            <article>
+                <h3>Risorante ratatouille</h3>
+                <p>School project with HTML5 and CSS3</p>
+                <img src="assets/img/portfolio/005.png" alt="Risorante ratatouille" title="Risorante ratatouille" />
+                <div class="overlay"></div>
+            </article>
+        </a>
+        <a href="Projects/003/index.html">
+            <article>
+                <h3>Pizza Palace</h3>
+                <p>School project with HTML5, CSS3 and Jquery</p>
+                <img src="assets/img/portfolio/006.png" alt="Pizza Palace" title="Pizza Palace" />
+                <div class="overlay"></div>
+            </article>
+        </a>
+        <a href="Projects/004/index.html">
+            <article>
+                <h3>Make a burger</h3>
+                <p>School project with HTML5, CSS3 and Jquery</p>
+                <img src="assets/img/portfolio/007.png" alt="Make a burger" title="Make a burger" />
+                <div class="overlay"></div>
+            </article>
+        </a>
     </main>
     <footer class="cf">
         <aside class="socials">
