fixed some bugs

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <main class="cf portfolio">
+    <main class="cf portfolio center">
         <a href="http://finestevents.org">
             <article>
                 <h3>Finest Events</h3>
