--- a/services.html
+++ b/services.html
@@ -27,21 +27,23 @@
     <main>
         <div class="services cf">
             <article class="service">
-                <img src="assets/img/services/design.png" title="" alt="" />
+                <img src="assets/img/services/design.png" title="design" alt="design" />
                 <h3>Design</h3>
-                <p>I create every design from scratch with illustrator,
-                    photoshop and eventually in CSS3 to get the best control and be in full control to deliver the best fitting solution for you.</p>
+                <p>I create every design from scratch using Illustrator,
+                    Photoshop and eventually put it into real code using the latest CSS3 technologies
+                    to be in full control from design phase until the final product and to deliver the best fitting solution for you.</p>
             </article>
             <article class="service">
-                <img src="assets/img/services/application.png" title="" alt="" />
+                <img src="assets/img/services/application.png" title="application" alt="application" />
                 <h3>Application</h3>
                 <p>Every application is made from scratch in the most fitting language for the project, varying from java to html.<br />
-                All applications are produced with a huge amount of dedication and maximum care to reach up to my high standards.</p>
+                All applications are produced with a huge amount of dedication and care to reach up to my personal high standards as well as yours.</p>
             </article>
             <article class="service">
-                <img src="assets/img/services/security.png" title="" alt="" />
-                <h3>security</h3>
-                <p>The projects are being developed with security in mind, trying to make the most secure application with the possible architecture is a key component in the process.</p>
+                <img src="assets/img/services/security.png" title="security" alt="security" />
+                <h3>Security</h3>
+                <p>The projects are being developed with security in mind, trying to make the most secure application
+                    with the tools and resources at hand is a key factor in the development of my applications.</p>
             </article>
         </div>
     </main>
