update github url

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             <a href="https://www.linkedin.com/in/jasper-de-moor-98791512a">
                 <img src="assets/img/socials/linkedin.png" title="linkedin" alt="linkedin" />
             </a>
-            <a href="https://github.com/JasperDeMoor">
+            <a href="https://github.com/DeMoorJasper">
                 <img src="assets/img/socials/github.png" title="linkedin" alt="linkedin" />
             </a>
         </aside>
