--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a href="https://www.linkedin.com/in/jasper-de-moor-98791512a">
                 <img src="assets/img/socials/linkedin_wh.png" title="linkedin" alt="linkedin" />
             </a>
-            <a href="https://github.com/JasperDeMoor">
+            <a href="https://github.com/DeMoorJasper">
                 <img src="assets/img/socials/github_wh.png" title="linkedin" alt="linkedin" />
             </a>
         </aside>
