--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,15 @@
                 <div class="overlay"></div>
             </article>
         </a>
+        <a href="http://www.pastamuse.be">
+            <article>
+                <h3>Pastamuse</h3>
+                <p>Full website rework with a CMS back-end.<br />
+                    Updated E-Marketing</p>
+                <img src="assets/img/portfolio/008.png" alt="Pastamuse" title="Pastamuse" />
+                <div class="overlay"></div>
+            </article>
+        </a>
         <a href="http://lesbellesdesjours.com">
             <article>
                 <h3>Les belles des jours</h3>
