update website for a more simplistic less all scale business look

--- a/index.html
+++ b/index.html
@@ -8,46 +8,20 @@
     <link rel="stylesheet" href="assets/css/screen.css">
 </head>
 <body class="home">
-    <header>
-        <a href="index.html">
-            <div class="logo hometxt">
-                <h1>Jasper De Moor</h1>
-                <h2>Digital Creative</h2>
-            </div>
-        </a>
-        <nav>
-            <ul>
-                <li><a href="portfolio.html" class="underline hometxt">Portfolio</a></li>
-                <li><a href="about.html" class="underline hometxt">About Me</a></li>
-                <li><a href="services.html" class="underline hometxt">Services</a></li>
-                <li><a href="mailto:jasperdemoor@gmail.com" class="underline hometxt">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
     <main>
-        <article class="slider">
-            <ul class="txtslider">
-                <li><h3>Jasper De Moor</h3></li>
-                <li><h3>Web development</h3></li>
-                <li><h3>App development</h3></li>
-                <li><h3>Security</h3></li>
-                <li><h3>Design</h3></li>
-            </ul>
-            <a href="mailto:jasperdemoor@gmail.com" class="button">Contact me</a>
-        </article>
-    </main>
-    <footer class="cf home">
+        <h1>Hello, i'm Jasper De Moor</h1>
+        <h2>I am a Developer, P2P enthousiast, open sourcerer, Cyber Crime Student @Howest Brugge and a huge fan of hackatons and clean code.</h2>
         <aside class="socials">
             <a href="https://www.linkedin.com/in/jasper-de-moor-98791512a">
-                <img src="assets/img/socials/linkedin_wh.png" title="linkedin" alt="linkedin" />
+                <img src="assets/img/socials/linkedin.png" title="linkedin" alt="linkedin" />
             </a>
             <a href="https://github.com/DeMoorJasper">
-                <img src="assets/img/socials/github_wh.png" title="linkedin" alt="linkedin" />
+                <img src="assets/img/socials/github.png" title="linkedin" alt="linkedin" />
+            </a>
+            <a href="mailto:jasperdemoor@gmail.com" class="button">
+                <img src="assets/img/socials/mail.png" title="contact me" alt="contact me" />
             </a>
         </aside>
-        <h1>- &#9400; Jasper De Moor -</h1>
-    </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="assets/js/slider.js"></script>
+    </main>
 </body>
 </html> 
