--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,10 +8,12 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/screen.css">
 </head>
+
 <body class="home">
     <main>
         <h1>Hello, i'm Jasper De Moor</h1>
-        <h2>I am a Developer, P2P enthousiast, open sourcerer, Cyber Crime Student @Howest Brugge and a huge fan of hackatons and clean code.</h2>
+        <h2>I am a backend &amp; front-end developer, P2P enthousiast, blockchain fanboy, open sourcerer, Cyber Crime Student
+            @Howest Brugge and a huge fan of hackatons, CTF's and clean &amp; secure code.</h2>
         <aside class="socials">
             <a href="https://www.linkedin.com/in/jasper-de-moor-98791512a">
                 <img src="assets/img/socials/linkedin.png" title="linkedin" alt="linkedin" />
@@ -24,4 +27,5 @@
         </aside>
     </main>
 </body>
-</html> 
+
+</html>
