--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="home">
     <main>
         <h1>Hello, i'm Jasper De Moor</h1>
-        <h2>I am a backend &amp; front-end developer, P2P enthousiast, blockchain fanboy, open sourcerer, Cyber Crime Student
+        <h2>I am a full-stack developer, P2P enthousiast, blockchain fanboy, open sourcerer, Cyber Crime Student
             @Howest Brugge and a huge fan of hackatons, CTF's and clean &amp; secure code.</h2>
         <aside class="socials">
             <a href="https://www.linkedin.com/in/jasper-de-moor-98791512a">
