improvements + twitter cino

--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
 <body class="home">
     <main>
         <h1>Hello, i'm Jasper De Moor</h1>
-        <h2>I am a full-stack developer, P2P enthousiast, blockchain fanboy, open sourcerer, Cyber Crime Student
-            @Howest Brugge and a huge fan of hackatons, CTF's and clean &amp; secure code.</h2>
+        <h2>I am a full-stack software engineer, open sourcerer, Cyber Crime Student @Howest Brugge 
+            and a huge fan of hackatons, CTF's and clean &amp; secure code.</h2>
         <aside class="socials">
             <a href="https://www.linkedin.com/in/jasper-de-moor-98791512a">
-                <img src="assets/img/socials/linkedin.png" title="linkedin" alt="linkedin" />
+                <img src="assets/img/socials/linkedin.png" title="Connect on linkedin" alt="Connect on linkedin" />
             </a>
             <a href="https://github.com/DeMoorJasper">
-                <img src="assets/img/socials/github.png" title="linkedin" alt="linkedin" />
+                <img src="assets/img/socials/github.png" title="See my open source adventures" alt="See my open source adventures" />
+            </a>
+            <a href="https://twitter.com/JasperDeMoor" class="button">
+                <img src="assets/img/socials/twitter.png" title="Send me a tweet" alt="Send me a tweet" />
             </a>
             <a href="mailto:jasperdemoor@gmail.com" class="button">
                 <img src="assets/img/socials/mail.png" title="contact me" alt="contact me" />
