--- a/src/resume.html
+++ b/src/resume.html
@@ -13,30 +13,7 @@
     <div class="content-container">
       <h1>Open Source projects I work/worked on</h1>
       <p class="sidenote">This list only shows the most recent projects, for a more accurate and complete list checkout <a href="https://github.com/DeMoorJasper">https://github.com/DeMoorJasper</a>.</p>
-      <div id="open-source-projects">
-        <ul>
-          <li>
-            <h2><a href="#">Parcel/Parcel [3 stars] [1 forks]</a></h2>
-            <p>Parcel is an amazing bundler</p>
-          </li>
-          <li>
-            <h2><a href="#">Parcel/Parcel [3 stars] [1 forks]</a></h2>
-            <p>Parcel is an amazing bundler</p>
-          </li>
-          <li>
-            <h2><a href="#">Parcel/Parcel [3 stars] [1 forks]</a></h2>
-            <p>Parcel is an amazing bundler</p>
-          </li>
-          <li>
-            <h2><a href="#">Parcel/Parcel [3 stars] [1 forks]</a></h2>
-            <p>Parcel is an amazing bundler</p>
-          </li>
-          <li>
-            <h2><a href="#">Parcel/Parcel [3 stars] [1 forks]</a></h2>
-            <p>Parcel is an amazing bundler</p>
-          </li>
-        </ul>
-      </div>
+      <div id="open-source-projects">Fetching data from github...</div>
 
       <script src="./github-fetch.js"></script>
     </div>
