--- a/src/resume.html
+++ b/src/resume.html
@@ -11,8 +11,66 @@
   </head>
   <body>
     <div class="content-container">
+      <h1>Work Experience</h1>
+      <ul>
+        <li>
+          <h2>
+            <span class="title">Senior Frontend developer</span>
+            <span class="company">Zero Friction</span>
+            <span class="location">Gent, Belgium</span>
+            <span class="timespan">Dec. 2018 - Present</span>
+          </h2>
+          <p>
+            Building a future-proof data management platform, dedicated to heat
+            using React.js
+          </p>
+        </li>
+        <li>
+          <h2>
+            <span class="title">Software engineer Intern</span>
+            <span class="company">Adobe</span>
+            <span class="location">San Francisco, USA</span>
+            <span class="timespan">Jul. 2018 - Sep. 2018</span>
+          </h2>
+          <p>React Spectrum (Adobe's design system) and Experience Cloud</p>
+        </li>
+        <li>
+          <h2>
+            <span class="title">Full Stack developer</span>
+            <span class="company">Open Summer of Code 2017</span>
+            <span class="location">Brussels, Belgium</span>
+            <span class="timespan">Jul. 2017</span>
+          </h2>
+          <p>
+            Full-Stack developer for the tripscore project, a proof of concept
+            showing the possibilities of using linked open data for a public
+            transport routeplanner
+          </p>
+        </li>
+      </ul>
+
+      <h1>Education</h1>
+      <ul>
+        <li>
+          <h2>
+            <span class="title">Computer & Cyber Crime Professional</span>
+            <span class="company">Howest</span>
+            <span class="location">Bruges, Belgium</span>
+            <span class="timespan">2016 - Present</span>
+          </h2>
+          <p>
+            Offensive & Defensive security, reverse engineering, malware
+            analysis, network security and secure programming,
+          </p>
+        </li>
+      </ul>
+
       <h1>Open Source projects I work/worked on</h1>
-      <p class="sidenote">This list only shows the most recent projects, for a more accurate and complete list checkout <a href="https://github.com/DeMoorJasper">https://github.com/DeMoorJasper</a>.</p>
+      <p class="sidenote">
+        This list only shows the most recent projects, for a more accurate and
+        complete list checkout (or in case the list isn't loading due to API limits)
+        <a href="https://github.com/DeMoorJasper" style="font-weight: bold;">https://github.com/DeMoorJasper</a>.
+      </p>
       <div id="open-source-projects">Fetching data from github...</div>
 
       <script src="./github-fetch.js"></script>
