--- a/src/resume.html
+++ b/src/resume.html
@@ -15,6 +15,18 @@
       <ul>
         <li>
           <h2>
+            <span class="title">Freelance Full-Stack Developer</span>
+            <span class="company">Blazingly.io</span>
+            <span class="location">Worldwide</span>
+            <span class="timespan">Apr. 2019 - Present</span>
+          </h2>
+          <p>
+            Building a future-proof data management platform, dedicated to heat
+            using React.js
+          </p>
+        </li>
+        <li>
+          <h2>
             <span class="title">Senior Frontend developer</span>
             <span class="company">Zero Friction</span>
             <span class="location">Gent, Belgium</span>
@@ -68,8 +80,11 @@
       <h1>Open Source projects I work/worked on</h1>
       <p class="sidenote">
         This list only shows the most recent projects, for a more accurate and
-        complete list checkout (or in case the list isn't loading due to API limits)
-        <a href="https://github.com/DeMoorJasper" style="font-weight: bold;">https://github.com/DeMoorJasper</a>.
+        complete list checkout (or in case the list isn't loading due to API
+        limits)
+        <a href="https://github.com/DeMoorJasper" style="font-weight: bold;"
+          >https://github.com/DeMoorJasper</a
+        >.
       </p>
       <div id="open-source-projects">Fetching data from github...</div>
 
