--- a/src/resume.html
+++ b/src/resume.html
@@ -21,8 +21,8 @@
             <span class="timespan">Apr. 2019 - Present</span>
           </h2>
           <p>
-            Building a future-proof data management platform, dedicated to heat
-            using React.js
+            Freelance developer with a focus on mobile, web and cloud technology
+            using JavaScript (React.js, React Native, Node.js, AWS, ...)
           </p>
         </li>
         <li>
