--- a/src/resume.html
+++ b/src/resume.html
@@ -27,10 +27,21 @@
         </li>
         <li>
           <h2>
+            <span class="title">Full-Stack Developer</span>
+            <span class="company">Open Summer Of Code 2019</span>
+            <span class="location">Brussels, Belgium</span>
+            <span class="timespan">Jul. 2019 - Jul. 2019</span>
+          </h2>
+          <p>
+            Building a cloud based application that uses artificial intelligence to extract emotions from speech to preemptively detect stress in call center employees and give them the proper support before they get a burnout or quit.
+          </p>
+        </li>
+        <li>
+          <h2>
             <span class="title">Senior Frontend developer</span>
             <span class="company">Zero Friction</span>
             <span class="location">Gent, Belgium</span>
-            <span class="timespan">Dec. 2018 - Present</span>
+            <span class="timespan">Dec. 2018 - Jul. 2019</span>
           </h2>
           <p>
             Building a future-proof data management platform, dedicated to heat
