--- a/src/resume.html
+++ b/src/resume.html
@@ -22,7 +22,7 @@
           </h2>
           <p>
             Freelance developer with a focus on mobile, web and cloud technology
-            using JavaScript (React.js, React Native, Node.js, AWS, ...)
+            using JavaScript (React.js, React Native, Node.js, Google Cloud, AWS, ...)
           </p>
         </li>
         <li>
